--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		}
 	],
 	"require" : {
-		"vvk/laravel-doctrine" : "dev-master"
+		"orm-backend/laravel-doctrine" : "dev-master"
 	},
 	"autoload" : {
 		"psr-4" : {
